@startuml

title __LAYERS's Class Diagram__\n

  namespace neuralNetwork {
    namespace components.layers {
      class neuralNetwork.components.layers.HiddenLayer {
          + HiddenLayer()
          + calculateOutputs()
          + connect()
          + findDeltas()
          + findWeightedDeltas()
          + updateWeights()
      }
    }
  }
  

  namespace neuralNetwork {
    namespace components.layers {
      class neuralNetwork.components.layers.InputLayer {
          + InputLayer()
          + calculateOutputs()
          + connect()
          + findDeltas()
          + findWeightedDeltas()
          + generateWeights()
          + updateWeights()
      }
    }
  }
  

  namespace neuralNetwork {
    namespace components.layers {
      abstract class neuralNetwork.components.layers.Layer {
          - deltas : ArrayList<Double>
          - neurons : ArrayList<Neuron>
          - outputs : ArrayList<Double>
          {static} - serialversionUID : long
          + Layer()
          + addNeuron()
          {abstract} + calculateOutputs()
          {abstract} + connect()
          {abstract} + findDeltas()
          {abstract} + findWeightedDeltas()
          + generateIDs()
          + generateWeights()
          + getDeltas()
          + getNeuron()
          + getNeurons()
          + getOutputs()
          + initializeLayer()
          + insertNeuron()
          + numNeurons()
          + removeNeuron()
          + setNeurons()
          {abstract} + updateWeights()
      }
    }
  }
  

  namespace neuralNetwork {
    namespace components.layers {
      class neuralNetwork.components.layers.OutputLayer {
          + OutputLayer()
          + calculateOutputs()
          + connect()
          + findDeltas()
          + findWeightedDeltas()
          + updateWeights()
      }
    }
  }
  

  neuralNetwork.components.layers.HiddenLayer -up-|> neuralNetwork.components.layers.Layer
  neuralNetwork.components.layers.InputLayer -up-|> neuralNetwork.components.layers.Layer
  neuralNetwork.components.layers.Layer .up.|> java.io.Serializable
  neuralNetwork.components.layers.OutputLayer -up-|> neuralNetwork.components.layers.Layer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
